--- a/latex/tex/A_Plan_proyecto.tex
+++ b/latex/tex/A_Plan_proyecto.tex
@@ -141,7 +141,7 @@ En la siguiente tabla se muestran las dependencias de Java junto con su versión
 	Apache Commons Math    & 3.6.1    & Apache-2.0   \\
 	Apache Log4j           & 1.2.17   & Apache-2.0   \\
 	Gson                   & 2.8.5    & Apache-2.0   \\
-	JSON In Java           & 20180813 & MIT          \\
+	JSON In Java           & 20180813 & JSON License          \\
 	JSoup Java HTML Parser & 1.11.3   & MIT          \\
 	SLF4J API Module       & 1.7.26   & MIT          \\
 	SLF4J LOG4J 12 Binding & 1.7.26   & MIT          \\
