--- a/latex/tex/E_Manual_usuario.tex
+++ b/latex/tex/E_Manual_usuario.tex
@@ -66,7 +66,7 @@ Ventana principal de visualización de gráficas del calificador y de los regist
 
 En esta ventana muestra los diferentes menús existentes, la lista de usuarios matriculados y las elecciones de diferentes gráficos.
 
-\imagen{vetana_graficas}{Pantalla inicial.}
+\imagen{vetana_graficas}{Pantalla inicial de la aplicación.}
 
 \subsubsection{Barra de herramientas}
 
