Terminado el anexo

--- a/latex/bibliografiaAnexos.bib
+++ b/latex/bibliografiaAnexos.bib
@@ -94,3 +94,13 @@
 	url = {https://www.java.com/es/download/faq/remove_olderversions.xml},
 	urldate = {2019-06-28}
 }
+
+
+@misc{tutorialspoint.com_design_nodate,
+	title = {Design {Pattern} {Factory} {Pattern}},
+	url = {https://www.tutorialspoint.com/design_pattern/factory_pattern.htm},
+	abstract = {Factory Pattern - Learning java design patterns in simple and easy steps : A beginner's tutorial containing complete knowledge about an java design patterns starting from its Factory Pattern, Abstract Factory, Singleton, Builder, Prototype, Adapter, Bridge, Filter, Composite, Decorator, Facade, Flyweight, Proxy, Command, Interpreter, Iterator, Mediator, Memento, Observer, State, Null Object,Strategy, Template, Visitor, MVC, Front Controller etc.},
+	urldate = {2019-06-30},
+	journal = {www.tutorialspoint.com},
+	author = {tutorialspoint.com}
+}
