--- a/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -67,8 +67,9 @@ Debido a este inconveniente, se decidió trabajar con otra función del servicio
 \begin{itemize}
 	\item Se puede ocultar la columna de \textbf{Retroalimentación}.
 	\item Necesita que la columna de \textbf{Porcentaje} no esté oculto para calcular los valores de escalas.
+	\item Las carpetas (categorías) deben tener un cálculo de calificación total.
 	\item Los \textbf{Rangos} de mínimo y máximo no debería tener decimales ya que no se muestran. Por ejemplo, se puede ver en la figura \ref{fig:rangos_decimales} que la calificación máxima es 5.25 pero el rango que muestra es solo 0-5. La aplicación seguiría funcionando pero se mostraría como nota en las gráficas que ha sacado un 5.25 sobre 5 (5.25/5).
-	\imagenflotante{rangos_decimales}{Ejemplo de ítem de calificación usando rangos con decimales}
+	\imagenflotante{rangos_decimales}{Ejemplo de ítem de calificación usando rangos con decimales}+
 \end{itemize}
 
 Este imprevisto ha supuesto un retraso de una semana en el proyecto.
