--- a/latex/tex/B_Requisitos.tex
+++ b/latex/tex/B_Requisitos.tex
@@ -35,7 +35,7 @@ Estos son los siguientes requisitos funcionales y no funcionales:
 	\end{itemize}
 	\item \textbf{RF-5 Integrar con otros proyectos:} debe poder integrar lo máximo posible de los proyectos UBUGrades y UBULogs.s
 	\item \textbf{RF-6 Fechas de los registros:} los registros se deben guardar en la zona horaria del servidor, hay que transformar a la del servidor si el usuario está usando otra zona horaria .
-	
+	\item \textbf{RF-7 Contraseña modificada:} cuando el usuario modifique la contraseña de la plataforma Moodle. Dar la opción de cambiar también en los ficheros de caché.
 	
 \end{itemize}
 
