--- a/latex/tex/C_Diseno.tex
+++ b/latex/tex/C_Diseno.tex
@@ -89,9 +89,46 @@ En la figura \ref{fig:diagrama_despliegue} se visualiza un diagrama de despliegu
 
 \imagen{diagrama_despliegue}{Diagrama de despliegue de la aplicación.}
 
-\subsection{Arquitectura MVC}
-
-\subsection{Patrones de diseño}
 
 \section{Diseño de la interfaz}
-En cuanto al diseño de la interfaz se ha mantenido el del proyecto de UBUGrades añadiendo las nuevas características del presente desarrollo.
+En cuanto al diseño de la interfaz se ha mantenido el del proyecto de UBUGrades añadiendo las nuevas características del presente desarrollo. Uno de los cambios fue el logo de la aplicación.
+
+
+\subsection{Pantalla de inicio de sesión}
+En la pantalla de inicio de sesión se añadieron más idiomas: catalán, alemán, portugués, francés e italiano.
+
+También se añadieron dos casillas: para recordar el usuario y el \textit{host}. 
+
+Estos cambios se puede apreciar en la figura \ref{fig:comparacion_login}
+\imagenflotante{comparacion_login}{Comparativa de la pantalla de inicio de sesión de UBUGrades (izda.) y UBUMonitor (dcha.)}
+
+\subsection{Pantalla de selección del curso}
+
+En la ventana de selección del curso se añadió información de las categorías del curso.
+
+Otra de las características fue la información de la fecha de la última vez que se ha actualizado los datos y la opción de actualizar estos datos.
+
+Las diferencias se puede ver en las  figuras \ref{fig:pantalla_ubugrades} y \ref{fig:pantalla_ubumonitor}.
+
+\imagenflotante{pantalla_ubugrades}{Pantalla de selección del curso en UBUGrades.}
+
+\imagenflotante{pantalla_ubumonitor}{Pantalla de selección del curso en UBUMonitor.}
+
+\subsection{Pantalla de visualización de gráficas.}
+
+En esta pantalla ha sufrido varios cambios destacables.
+
+Por una parte, en el listado de usuarios se han añadido las fotografías asociadas de Moodle y el último acceso a la plataforma de los usuarios hasta el momento. Las comparativas se ven en la figura \ref{fig:comparacion_lista_usuarios}.
+
+\imagenflotante{comparacion_lista_usuarios}{Comparación de la lista de usuarios.}
+
+En el calificador se añadieron imágenes de todos los módulos del curso y en un tamaño más grande en la figura \ref{fig:comparacion_grades}. 
+\imagenflotante{comparacion_grades}{Comparación del calificador.}
+
+Se añadieron varias pestañas para dividir las calificaciones de los registros y dentro de los registros se subdividen en Componentes y eventos (figura \ref{fig:lista_componentes_eventos}).
+
+\imagenflotante{lista_componentes_eventos}{Listado de componentes y de componentes-eventos.}
+
+En las gráficas de los registros se han añadido varias opciones de filtrado (figura \ref{fig:opciones_graficas_registros}).
+
+\imagen{opciones_graficas_registros}{Las opciones de las gráficas de registros.}
