--- a/latex/tex/D_Manual_programador.tex
+++ b/latex/tex/D_Manual_programador.tex
@@ -163,7 +163,12 @@ Para clasificar se ha partido de la premisa de que las columnas \textbf{Componen
 
 A partir de expresiones regulares, se ha buscado las posibles los ids de las descripciones y con esos números pasado a un delegado (clase) en función del Componente y Evento. 
 
+
+
 \imagen{tipos_logs}{Clasificación de los registros junto con sus delegados.}
+Esto está implementado con el patrón Fábrica (\textit{Factory pattern}) \cite{tutorialspoint.com_design_nodate}.
+
+\imagen{diagrama_factory}{Diagrama de clases implementado el patrón Fábrica}
 
 \subsubsection{Delegados}
 
