Arreglado bugs y refactorizado

--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -70,7 +70,7 @@ text.minutes=minutos
 text.seconds=segundos
 label.setMax=Cambiar escala máxima sugerida: 
 label.groupbydate= Agrupar por: 
-label.startdate=Fecha de refencia inicial: 
+label.startdate=Fecha de referencia inicial: 
 label.enddate=Fecha de referencia final: 
 btn.filter=Aplicar filtro de fechas
 tab.logs=Registros
