Correcciones de latex realizadas

--- a/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -17,8 +17,10 @@ En resumidas cuentas, en general he disfrutado mucho realizando el proyecto, con
 A pesar de cumplir los objetivos planteados, sí que se han encontrado otras funcionalidades durante el desarrollo del proyecto. Estas nuevas características no se han podido implementar por falta de tiempo.
 
 \begin{itemize}
-	\item Empleo de técnicas de minería de datos que generan clúster de usuarios del curso. Estos clústeres se muestran en una gráfica de dispersión (en inglés \textit{scatter plot})
+	\item Empleo de técnicas de minería de datos que generarán clústeres de usuarios del curso. Estos clústeres se mostrarán en una gráfica de dispersión (en inglés \textit{scatter plot})
 	\item Que la aplicación funcione en modo sin conexión usando solo los ficheros en local. 
 	\item Buscar una librería alternativa a Google Charts \cite{noauthor_charts_nodate} de código libre.
 	\item Otro tipo de gráficas de registros de usuarios usando los módulos del curso.
+	\item Gestión de la caché según el año.
+	\item Exportación de datos a CSV u otros formatos parecidos.
 \end{itemize}
