--- a/latex/tex/B_Requisitos.tex
+++ b/latex/tex/B_Requisitos.tex
@@ -2,7 +2,7 @@
 
 \section{Introducción}
 
-En este anexo se comentará los objetivos generales del proyecto y detallando sobre los requisitos funcionales y no funcionales establecidos durante el desarrollo del proyecto.
+En este anexo se comentará los objetivos generales del proyecto y detallando sobre los requisitos funcionales y no funcionales establecidos durante el desarrollo.
 
 \section{Objetivos generales}
 El proyecto tiene como objetivos la refactorización del código junto con la integración de los registros del curso. Añadir nuevas mejoras de interacción con el usuario así como poder guardar los datos en ficheros cifrados. También realizar nuevas gráficas de los registros junto con sus opciones de filtrado.
@@ -33,9 +33,9 @@ Estos son los siguientes requisitos funcionales y no funcionales:
 		\item \textbf{RF-4.1 Imágenes de los usuarios:} mostrar los fotos de los usuarios asociados en Moodle.
 		\item \textbf{RF-3.2 Últimos accesos:} mostrar los últimos accesos de los usuarios a la plataforma de Moodle.
 	\end{itemize}
-	\item \textbf{RF-5 Integrar con otros proyectos:} debe poder integrar lo máximo posible de los proyectos UBUGrades y UBULogs.s
+	\item \textbf{RF-5 Integrar con otros proyectos:} debe poder integrar lo máximo posible de los proyectos UBUGrades y UBULogs.
 	\item \textbf{RF-6 Fechas de los registros:} los registros se deben guardar en la zona horaria del servidor, hay que transformar a la del servidor si el usuario está usando otra zona horaria .
-	\item \textbf{RF-7 Contraseña modificada:} cuando el usuario modifique la contraseña de la plataforma Moodle. Dar la opción de cambiar también en los ficheros de caché.
+	\item \textbf{RF-7 Contraseña modificada:} cuando el usuario modifique la contraseña de la plataforma Moodle, dar la opción de cambiar también en los ficheros de caché.
 	
 \end{itemize}
 
@@ -44,7 +44,7 @@ Estos son los siguientes requisitos funcionales y no funcionales:
 \begin{itemize}
 	\item \textbf{RNF-1 Tiempos de respuesta:} la aplicación debe tener buenos tiempos de respuesta a las diferentes acciones del usuarios. 
 	\item \textbf{RNF-2 Gestión de memoria:} el consumo de memoria de la aplicación no debe ser excesiva.
-	\item \textbf{RNF-3 Usabilidad:} el esfuerzo del usuario para aprender a usar la aplicación debería ser mínimo.
+	\item \textbf{RNF-3 Usabilidad:} el esfuerzo del usuario para aprender a usar la aplicación debe ser mínimo.
 	\item \textbf{RNF-4 Soporte:} brindar al usuario una fácil instalación, documentaciones de uso y facilidad de actualización hacia versiones más recientes.
 	\item \textbf{RNF-5 Internacionalización:} la aplicación debe poder añadir fácilmente otros idiomas.
 \end{itemize}
