--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -60,7 +60,7 @@ btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
 
-text.nousers=No hay coicidencias
+text.nousers=No hay coincidencias
 text.all=Todos
 text.lastaccess=Último acceso: 
 text.never=Nunca
