Including export to csv.

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -34,6 +34,7 @@ menu.file=Dossier
 menu.changesubject=Canvia el tema
 menu.savechart=Desa el gràfic com ...
 menu.saveall=Desa-ho tot com a ...
+menu.exportcsv=Exportar CSV
 menu.logout=Tancar sessió
 menu.exit=Sortir
 menu.edit=Edita
@@ -80,6 +81,7 @@ choiceBox.YEAR_QUARTER=Trimestres
 choiceBox.YEAR_MONTH=Mesos
 error.savechart=Error en desar el diagrama.
 error.saveallcharts=No es poden exportar gràfics.
+error.savecsvfiles=No s'han pogut exportar les dades en format CSV.
 error.generatedataset=S'ha produït un error en construir el conjunt de dades.
 error.generateCharts=No es poden generar gràfics.
 chartlabel.name=Nom
@@ -358,3 +360,6 @@ eventname.wiki_page_viewed=Visualitzada la pàgina de Wiki
 eventname.xls_grade_exported=Gamma XLS exportada
 eventname.xml_grade_exported=S'ha exportat el nivell XML
 eventname.zip_archive_of_folder_downloaded=Arxiu zip de la carpeta descarregada
+
+message.export_csv_success=Exportació CSV amb èxit. Revisi els fitxers del directori ./export.
+
