--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -33,7 +33,8 @@ label.close=Schließen
 menu.file=Datei
 menu.changesubject=Das Thema wechseln
 menu.savechart=Grafik speichern unter ...
-menu.saveall=Alles speichern unter ...
+menu.saveall=Alles speichern unter ..
+menu.exportcsv=CSV-Daten exportieren
 menu.logout=Ausloggen
 menu.exit=Ausgang
 menu.edit=Bearbeiten
@@ -80,6 +81,7 @@ choiceBox.YEAR_QUARTER=Viertel
 choiceBox.YEAR_MONTH=Monate
 error.savechart=Fehler beim Speichern des Diagramms.
 error.saveallcharts=Diagramme können nicht exportiert werden.
+error.savecsvfiles=Die Daten konnten nicht im CSV-Format exportiert werden.
 error.generatedataset=Fehler beim Erstellen des Datasets.
 error.generateCharts=Diagramme können nicht generiert werden.
 chartlabel.name=Name
@@ -358,3 +360,5 @@ eventname.wiki_page_viewed=Wiki-Seite angezeigt
 eventname.xls_grade_exported=XLS-Qualität exportiert
 eventname.xml_grade_exported=XML-Grad exportiert
 eventname.zip_archive_of_folder_downloaded=Zip-Archiv des heruntergeladenen Ordners
+
+message.export_csv_success=CSV-Export erfolgreich. Überprüfen Sie die Dateien im Verzeichnis ./export.
