--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -41,6 +41,7 @@ menu.file=File
 menu.changesubject=Change Subject
 menu.savechart=Save chart as...
 menu.saveall=Save all as...
+menu.exportcsv=Export CSV data
 menu.logout=Logout
 menu.exit=Exit
 menu.edit=Edit
@@ -90,6 +91,7 @@ choiceBox.YEAR_MONTH=Months
 
 error.savechart=Error saving chart.
 error.saveallcharts=Can't export charts.
+error.savecsvfiles=The data could not be exported in CSV format.
 error.generatedataset=Error building the dataset.
 error.generateCharts=Can't generate charts.
 
@@ -377,4 +379,5 @@ eventname.xml_grade_exported=XML grade exported
 eventname.zip_archive_of_folder_downloaded=Zip archive of folder downloaded
 
 
+message.export_csv_success=CSV export successfully. Review the files in the ./export directory.
 
