--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -41,6 +41,7 @@ menu.file=Archivo
 menu.changesubject=Cambiar Asignatura
 menu.savechart=Guardar gráfico como...
 menu.saveall=Guardar todo como...
+menu.exportcsv=Exportar datos CSV
 menu.logout=Cerrar sesión
 menu.exit=Salir
 menu.edit=Editar
@@ -89,7 +90,8 @@ choiceBox.YEAR_MONTH=Meses
 
 error.savechart=Error al gruardar el gráfico.
 error.saveallcharts=No se han podido exportar los gráficos.
-error.generatedataset=Error en la construccián del dataset.
+error.savecsvfiles=No se han podido exportar los datos en formato CSV.
+error.generatedataset=Error en la construcción del dataset.
 error.generateCharts=No se han podido generar los gráficos.
 
 chartlabel.name=Nombre
@@ -379,5 +381,5 @@ eventname.xml_grade_exported=Grado xml exportado
 eventname.zip_archive_of_folder_downloaded=Archivo zip de la carpeta descargada
 
 
-
+message.export_csv_success=Exportación CSV con éxito. Revise los ficheros en el directorio ./export.
 
