--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -34,6 +34,7 @@ menu.file=Fichier
 menu.changesubject=Change le sujet
 menu.savechart=Enregistrer le graphique sous ...
 menu.saveall=Enregistrer tout sous ...
+menu.exportcsv=Exporter des données CSV
 menu.logout=Connectez - Out
 menu.exit=Sortie
 menu.edit=modifier
@@ -80,6 +81,7 @@ choiceBox.YEAR_QUARTER=Trimestres
 choiceBox.YEAR_MONTH=Mois
 error.savechart=Erreur d'enregistrement du graphique.
 error.saveallcharts=Impossible d'exporter des graphiques.
+error.savecsvfiles=Les données n'ont pas pu être exportées au format CSV.
 error.generatedataset=Erreur lors de la construction du jeu de données.
 error.generateCharts=Impossible de générer des graphiques.
 chartlabel.name=prénom
@@ -370,3 +372,6 @@ eventname.wiki_page_viewed=Page Wiki consultÃ©e
 eventname.xls_grade_exported=Grade XLS exportÃ©
 eventname.xml_grade_exported=Niveau XML exportÃ©
 eventname.zip_archive_of_folder_downloaded=Archive zip du dossier tÃ©lÃ©chargÃ©
+
+message.export_csv_success=Export CSV avec succès. Passez en revue les fichiers du répertoire ./export.
+
