--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -34,6 +34,7 @@ menu.file=File
 menu.changesubject=Cambia materia
 menu.savechart=Salva grafico come ...
 menu.saveall=Salva tutto come ...
+menu.exportcsv=Esporta dati CSV
 menu.logout=Disconnettersi
 menu.exit=Uscita
 menu.edit=modificare
@@ -80,6 +81,7 @@ choiceBox.YEAR_QUARTER=alloggio
 choiceBox.YEAR_MONTH=mesi
 error.savechart=Errore durante il salvataggio del grafico.
 error.saveallcharts=Impossibile esportare i grafici.
+error.savecsvfiles=I dati non possono essere esportati in formato CSV.
 error.generatedataset=Errore durante la creazione del set di dati.
 error.generateCharts=Non posso generare grafici.
 chartlabel.name=Nome
@@ -358,3 +360,6 @@ eventname.wiki_page_viewed=Pagina Wiki visualizzata
 eventname.xls_grade_exported=Qualità XLS esportata
 eventname.xml_grade_exported=Qualità XML esportata
 eventname.zip_archive_of_folder_downloaded=Archivio zip della cartella scaricato
+
+message.export_csv_success=Esportazione CSV con successo. Esaminare i file nella directory ./export.
+
