--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -34,6 +34,7 @@ menu.file=Arquivo
 menu.changesubject=Mudar de assunto
 menu.savechart=Salvar gráfico como ...
 menu.saveall=Salvar tudo como ...
+menu.exportcsv=Exportar dados CSV
 menu.logout=Sair
 menu.exit=Saída
 menu.edit=Editar
@@ -80,6 +81,7 @@ choiceBox.YEAR_QUARTER=Quartos
 choiceBox.YEAR_MONTH=Meses
 error.savechart=Erro ao salvar gráfico.
 error.saveallcharts=Não é possível exportar gráficos.
+error.savecsvfiles=Os dados não puderam ser exportados no formato CSV.
 error.generatedataset=Erro ao construir o conjunto de dados.
 error.generateCharts=Não é possível gerar gráficos.
 chartlabel.name=Nome
@@ -358,3 +360,5 @@ eventname.wiki_page_viewed=Página do Wiki visualizada
 eventname.xls_grade_exported=Grau XLS exportado
 eventname.xml_grade_exported=Grau XML exportado
 eventname.zip_archive_of_folder_downloaded=Arquivo zip da pasta baixada
+
+message.export_csv_success=Exportação CSV com sucesso. Revise os arquivos no diretório ./export.
