Exportacion de datos del curso y los usuarios. Cambiado la bandera de catañula, añadido pestañas de secciones y modulos del curso.

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -50,6 +50,8 @@ label.participants=Participants:
 label.categoryitem=Categoria / article:
 label.component=Component:
 label.componentorevent=Esdeveniment de component
+label.section=Seccions:
+label.coursemodule=Mòduls del curs:
 btn.group=Grup
 btn.rol=Rol
 btn.type=Escriviu
@@ -70,6 +72,8 @@ tab.logs=Registres
 tab.component=Components
 tab.event=Esdeveniments
 tab.grades=Graus
+tab.section=Secció
+tab.coursemodule=Mòduls del curs
 choiceBox.DAY=Dies
 choiceBox.HOUR=Hores
 choiceBox.AM_PM=AM PM
