--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -50,6 +50,8 @@ label.participants=Teilnehmer:
 label.categoryitem=Kategorie / Gegenstand:
 label.component=Komponente:
 label.componentorevent=Komponentenereignis
+label.section=Abschnitt:
+label.coursemodule=Kursmodule:
 btn.group=Gruppe
 btn.rol=Rol
 btn.type=Art
@@ -69,6 +71,8 @@ btn.filter=Datumsfilter anwenden
 tab.logs=Protokolle
 tab.component=Komponenten
 tab.event=Veranstaltungen
+tab.section=Abschnitt
+tab.coursemodule=Kursmodule
 tab.grades=Noten
 choiceBox.DAY=Tage
 choiceBox.HOUR=Std
