--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -58,6 +58,8 @@ label.participants=Participants:
 label.categoryitem=Category/Item:
 label.component=Component: 
 label.componentorevent=Component\nEvent
+label.section=Section:
+label.coursemodule=Course module:
 btn.group=Group
 btn.rol=Rol
 btn.type=Type
@@ -79,6 +81,8 @@ tab.logs=Logs
 tab.component=Components
 tab.event=Events
 tab.grades=Grades
+tab.section=Sections
+tab.coursemodule=Course Modules
 choiceBox.DAY=Days
 choiceBox.HOUR=Hours
 choiceBox.AM_PM=AM/PM
