--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -53,10 +53,12 @@ label.group=Grupo:
 label.rol=Rol:
 label.type=Tipo:
 label.filter=Filtro...
+label.component=Componente: 
 label.componentorevent=Componente\nEvento
+label.section=Secciones:
+label.coursemodule=Módulos del curso:
 label.participants=Participantes: 
 label.categoryitem=Categoría/Item:
-label.component=Componente: 
 btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
@@ -78,6 +80,8 @@ tab.logs=Registros
 tab.grades=Calificaciones
 tab.component=Componentes
 tab.event=Eventos
+tab.section=Sección
+tab.coursemodule=Módulos curso
 choiceBox.DAY=Días
 choiceBox.HOUR=Horas
 choiceBox.AM_PM=AM/PM
