--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -50,6 +50,8 @@ label.participants=Participants:
 label.categoryitem=Catégorie / article:
 label.component=Composant:
 label.componentorevent=Événement de composant
+label.section=Des sections:
+label.coursemodule=Modules de cours:
 btn.group=Groupe
 btn.rol=Rol
 btn.type=Type
@@ -69,6 +71,8 @@ btn.filter=Apply dates filter
 tab.logs=Les journaux
 tab.component=Composants
 tab.event=Événements
+tab.section=Section
+tab.coursemodule=Modules de cours
 tab.grades=Les notes
 choiceBox.DAY=Journées
 choiceBox.HOUR=Heures
