--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -50,6 +50,8 @@ label.participants=partecipanti:
 label.categoryitem=Categoria / Articolo:
 label.component=Componente:
 label.componentorevent=Evento componente
+label.section=Sezioni:
+label.coursemodule=Moduli del corso:
 btn.group=Gruppo
 btn.rol=Rol
 btn.type=genere
@@ -70,6 +72,8 @@ tab.logs=logs
 tab.component=componenti
 tab.event=eventi
 tab.grades=gradi
+tab.section=Sezione
+tab.coursemodule=Moduli del corso
 choiceBox.DAY=giorni
 choiceBox.HOUR=Ore
 choiceBox.AM_PM=AM PM
