--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -50,6 +50,8 @@ label.participants=Participantes:
 label.categoryitem=Categoria / Item:
 label.component=Componente:
 label.componentorevent=Evento Componente
+label.section=Seções:
+label.coursemodule=Módulos do curso:
 btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
@@ -70,6 +72,8 @@ tab.logs=Logs
 tab.component=Componentes
 tab.event=Eventos
 tab.grades=Notas
+tab.section=Seção
+tab.coursemodule=Módulos do curso
 choiceBox.DAY=Dias
 choiceBox.HOUR=Horas
 choiceBox.AM_PM=MANHÃ TARDE
